--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,26 @@
+* {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+header {
+  background-color: #000000;
+  color: #FFFFFF;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  margin: 0;
+  width: 100%;
+}
+
 body {
     background-color: slategrey;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
 }
 
 .buttons {
@@ -21,7 +42,7 @@ button {
   cursor: pointer;
   display: inline-block;
   font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-  font-size: 16px;
+  font-size: 36px;
   font-weight: 600;
   height: 200px;
   line-height: normal;
@@ -41,6 +62,7 @@ button {
 }
 
 button:disabled {
+  background-color: slategrey;
   pointer-events: none;
 }
 
@@ -52,4 +74,26 @@ button:hover {
 button:active {
   box-shadow: none;
   transform: translateY(0);
+}
+
+.result-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.game-result {
+  font-size: 100px;
+}
+
+.result-text {
+  font-size: 50px;
+  margin: 20px;
+}
+
+.winner-declaration {
+  font-size: 80px;
+  margin: 20px;
 }
